<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Plan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
      
      <!-- Login strings -->
    <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login:</string>
   <string name="attempts">Attempts Left:</string>
  
   <!-- home strings -->
   <string name="creat">Creat</string>
   
    <!-- home plane strings -->
    <string name="Creat1">Creat</string>
    <string name="Plans">Plans</string>
    
    <!-- configration plan strings -->
    <string name="Plan">Plan</string>
    <string name="Title">Title:</string>
    <string name="info">info:</string>
    <string name="content">Content:</string>
    <string name="Time">Time:</string>
    <string name="ok">Next</string>
    
   <!-- headlines strings  -->
   <string name="Add">Add</string>
   
   <!-- about strings -->
   <string name="About">About</string>
   <string name="contuctus">Contuct US</string>

</resources>
